--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "zemkogabor/iranyitoszamok-php",
   "version": "0.0.1",
+  "license": "MIT",
   "autoload": {
     "psr-4": {"App\\": "src/"}
   },
@@ -14,5 +15,6 @@
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.14"
-  }
+  },
+  "minimum-stability": "dev"
 }
