--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "autoload": {
-    "psr-4": {"App\\": "src/"}
+    "psr-4": {"Irsz\\": "src/"}
   },
   "config": {
     "platform": {
